:bug: fix: fix input text align

--- a/docs/e2e/basic/demos/Text/Text.less
+++ b/docs/e2e/basic/demos/Text/Text.less
@@ -19,3 +19,21 @@
   vertical-align: middle;
   background-color: navajowhite;
 }
+
+.row-item {
+  display: flex;
+  width: 60px;
+  height: 40px;
+}
+
+.row-item-reverse {
+  display: flex;
+  width: 60px;
+  height: 40px;
+}
+.column-item {
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+  height: 40px;
+}
